2003-06-09 Damien McGinnes

	* Mercator/Segment.cpp : modified the normal array to be same size as
	  the heights array. bottom and right boundaries are a bit of a hack
	
2003-06-09 Damien McGinnes

	* Mercator/Segment.cpp : added in an attempt at values for the normal
	  array. Array is one row and column smaller than the height array.
	 
2003-06-08  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/Segment.h, Mercator/Segment.cpp: Tidy up some code,
	  and add the beginnings of the normal calculation code.

2003-06-08  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/Terrain.h, Mercator/Terrain.cpp: Get rid of the passing
	  over extra surrounding basepoints into Segment::populate.

	* Mercator/Segment.h, Mercator/Segment.cpp: No longer require
	  surrounding basepoints when doing qRMD. Add API and stubs for
	  storing an entire array of normals. Segment::populateNormals()
	  currently just allocates the array of normals. It does nothing
	  else.

2003-06-06 Damien McGinnes

	* TerrainMod.h: fixed where I called Center() instead of getCenter()

2003-06-06 Damien McGinnes

	* TerrainMod.h : added. Defines modifiers for the terrain.
	* Segment.h/Segment.cpp : modified to use TerrainMod objects, stored
	  in a list, applied in order during populate
	* removed Segment_impl.h refactored out.

2003-06-03  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/Segment_impl.h Mercator/Segment.cpp: Fix problem
	  with wfmath template instances, and clean up code.

2003-06-03 Damien McGinnes

	* Segment.cpp Segment.h Segment_impl.h: started work on modification
	  of terrain. Still got a problem that the Contains call in
	  Segment_impl.h doesnt work (link error)

2003-05-24 Damien McGinnes

	* Mercator/Segment.h Mercator/Segment.cpp: Cleaned up Segment, removed
	  tile.cpp and tile.h and moved them into Segment
	* TODO: added some ideas
	* AUTHORS: added some authors
	* added getHeightAndNormal to segment
	* addded some test code for modifying terrain to segment
